<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OneBusAway</string>
    <string name="trip_service_perm_label">start the trip service</string>
    <string name="trip_service_perm_description">Allows the application to implement reminders for upcoming buses.</string>
    <string name="generic_comm_error">Sorry, there was a communication error and we can\'t show this information. Try again and it might work.</string>
    <string name="generic_comm_error_toast">Failed to update. We\'ll try again in a minute.</string>
    <string name="route_not_found_error">Sorry, that particular route can\'t be found. If this was a shortcut, it\'s possible your link is out of date.</string>
    <string name="stop_not_found_error">Sorry, that particular stop can\'t be found. If this was a shortcut, it\'s possible your link is out of date.</string>
    <string name="internal_error">Oops, something went wrong. Try again and it might work.</string>
    <string name="out_of_memory_error">Sorry, there isn\'t enough available memory to handle that request.</string>
    <string name="bad_gateway_error">OneBusAway\'s servers are overloaded. Please excuse us!</string>
    <string name="map_generic_error">Unable to get stops.</string>
    <string name="no_network_error">You appear to be offline or are not connected to the network.</string>
    <string name="airplane_mode_error">You are not connected to the network.\nTurn off Airplane Mode?</string>
    <string name="direction_n">Northbound</string>
    <string name="direction_ne">Northeast bound</string>
    <string name="direction_e">Eastbound</string>
    <string name="direction_se">Southeast bound</string>
    <string name="direction_s">Southbound</string>
    <string name="direction_sw">Southwest bound</string>
    <string name="direction_w">Westbound</string>
    <string name="direction_nw">Northwest bound</string>
    <string name="direction_none"></string>
    <string name="loading">Loading&#8230;</string>
    <string name="browser_error">Unable to launch browser.</string>
    <string name="search_hint">Search stops or routes</string>
    <string name="search">Search</string>
    <string name="checkmark_description">Selection checkmark</string>
    <string name="map_option_mylocation">My Location</string>
    <string name="map_option_search">Search</string>
    <string name="main_option_findroute">My Routes</string>
    <string name="main_option_findstop">My Stops</string>
    <string name="main_option_viewtrips">My Reminders</string>
    <string name="main_option_help">Help</string>
    <string name="main_option_preferences">Preferences</string>
    <string name="main_arrival_info">Show arrivals</string>
    <string name="main_show_routes">Show routes</string>
    <string name="main_hide_routes">Hide routes</string>
    <string name="main_help_title">Help</string>
    <string name="main_help_whatsnew_title">What\'s New?</string>
    <string name="main_help_whatsnew_22">All new UI!\n\nSave/restore your data!\n\nBetter bug reporting!\n\nMuch more!</string>
    <string name="main_help_whatsnew">Support for OneBusAway in other transit regions!\n\nBug fixes!</string>
    <string name="main_help_close">Close</string>
    <string name="main_nolocation_title">Location not enabled</string>
    <string name="main_nolocation">OneBusAway would like your location, do you want to enable it now?</string>
    <string name="main_waiting_for_location">Trying to get a fix on your location&#8230;</string>
    <string name="main_location_unavailable">Unable to get your location.</string>
    <string name="main_outofrange_title">Out of range</string>
    <string name="main_outofrange">You are out of OneBusAway\'s service area.\n\nGo there now?</string>
    <string name="main_outofrange_yes">Take me there</string>
    <string name="main_outofrange_no">Stay where I am</string>
    <string name="stop_info_ontime">On time</string>
    <plurals name="stop_info_arrive_delayed">
      <item quantity="one">1 minute delay</item>
      <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes delay</item>
    </plurals>
    <plurals name="stop_info_arrive_early">
      <item quantity="one">1 minute early</item>
      <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes early</item>
    </plurals>
    <plurals name="stop_info_depart_delayed">
      <item quantity="one">Departed 1 minute late</item>
      <item quantity="other">Departed <xliff:g id="count">%d</xliff:g> minutes late</item>
    </plurals>
    <plurals name="stop_info_depart_early">
      <item quantity="one">Departed 1 minute early</item>
      <item quantity="other">Departed <xliff:g id="count">%d</xliff:g> minutes early</item>
    </plurals>
    <string name="stop_info_scheduled_arrival">Scheduled arrival</string>
    <string name="stop_info_scheduled_departure">Scheduled departure</string>
    <string name="stop_info_frequency_from">Every %1$d mins from %2$s</string>
    <string name="stop_info_frequency_until">Every %1$d mins until %2$s</string>
    <string name="stop_info_eta_now">NOW</string>
    <string name="stop_info_option_showonmap">Show On Map</string>
    <string name="stop_info_option_refresh">Refresh</string>
    <string name="stop_info_option_filter">Filter Routes</string>
    <string name="stop_info_option_editname">Edit Name</string>
    <string name="stop_info_option_addstar">Add Star</string>
    <string name="stop_info_option_removestar">Remove Star</string>
    <string name="stop_info_option_reportproblem">Report Problem</string>
    <string name="stop_info_nodata">No arrivals in the next 35 minutes.</string>
    <string name="stop_info_item_options_title">Bus options</string>
    <string name="stop_info_filter_title">Show only these routes</string>
    <string name="stop_info_filter_header">Showing %1$d of %2$d routes</string>
    <string name="stop_info_filter_showall">(show all)</string>
    <string name="stop_info_save">Save</string>
    <string name="stop_info_cancel">Cancel</string>
    <string name="stop_info_clear">Clear</string>
    <string name="stop_info_old_data">Data updated %s</string>
    <string name="stop_info_favorite">Favorite stop</string>
    <string name="route_info_context_get_stop_info">Show arrival information</string>
    <string name="route_info_context_showonmap">Show on map</string>
    <string name="route_info_goto_url">View schedule</string>
    <string name="my_recent_title">Recent</string>
    <string name="my_starred_title">Starred</string>
    <string name="my_search_title">Search</string>
    <string name="my_no_recent_stops">You have no recent stops.</string>
    <string name="my_no_starred_stops">You have no starred stops.\n\nYou can add a star to a stop on the arrivals screen.</string>
    <string name="my_no_recent_routes">You have no recent routes.</string>
    <string name="my_option_clear_recent_stops">Clear recent stops</string>
    <string name="my_option_clear_recent_routes">Clear recent routes</string>
    <string name="my_option_clear_starred_stops">Remove all starred stops</string>
    <string name="my_option_clear_confirm">There\'s no going back! Go ahead?</string>
    <string name="my_option_clear_confirm_title">Sure about this?</string>
    <string name="my_context_get_stop_info">Show arrival information</string>
    <string name="my_context_get_route_info">Show route information</string>
    <string name="my_context_create_shortcut">Create shortcut</string>
    <string name="my_context_showonmap">Show on map</string>
    <string name="my_context_remove_recent">Remove from recent</string>
    <string name="my_context_remove_star">Remove star</string>
    <string name="my_context_show_schedule">Show schedule</string>
    <string name="find_hint_nofavoritestops">Find a stop by entering its stop number in the search box.\n\nThe stop number is 3 to 5 digits and can be found on the stop signpost or shelter.</string>
    <string name="find_hint_nofavoriteroutes">Find a route by entering its route name or number in the search box.</string>
    <string name="find_hint_noresults">There are no results that match your search.</string>
    <string name="search_stop_hint">Enter a stop number</string>
    <string name="search_route_hint">Enter a route name/number</string>
    <string name="route_shortcut">OneBusAway Route</string>
    <string name="stop_shortcut">OneBusAway Stop</string>
    <string name="recent_stops_shortcut">Recent Stops</string>
    <string name="recent_routes_shortcut">Recent Routes</string>
    <string name="starred_stops_shortcut">Starred Stops</string>
    <string name="route_name">Route %s</string>
    <string name="trip_info_name">Reminder name</string>
    <string name="trip_info_name_hint">Add a reminder name</string>
    <string name="trip_info_route">Route %s</string>
    <string name="trip_info_depart">Departs at %s</string>
    <string name="trip_info_reminder_header">Reminder Time</string>
    <string name="trip_info_reminder_repeat">Repeats</string>
    <string name="trip_info_save">Save</string>
    <string name="trip_info_cancel">Cancel</string>
    <string name="trip_info_delete">Delete</string>
    <string name="trip_info_saved">Trip saved.</string>
    <string name="trip_info_dismiss">Cancel</string>
    <string name="trip_info_delete_trip">This reminder will be deleted.</string>
    <string name="trip_info_repeat_every">Every %s</string>
    <string name="trip_info_repeat_everyday">Everyday</string>
    <string name="trip_info_repeat_weekdays">Weekdays (Mon-Fri)</string>
    <string name="trip_info_repeat_norepeat">One-time</string>
    <string name="trip_info_noname">(no name)</string>
    <string name="trip_info_option_showroute">Show Route</string>
    <string name="trip_info_option_showstop">Show Stop</string>
    <string name="trip_info_separator">-</string>
    <string name="trip_list_notrips">You don\'t have any reminders.\n\nYou can create reminders by tapping on an arriving bus at your stop.</string>
    <string name="trip_list_context_edit">Edit trip</string>
    <string name="trip_list_context_delete">Delete trip</string>
    <string name="trip_list_context_showstop">Show stop</string>
    <string name="trip_list_context_showroute">Show route</string>
    <string name="trip_stat_gone">Route %s has departed.</string>
    <string name="trip_stat_lessthanone">Route %s is less than a minute away!</string>
    <string name="trip_stat_one">Route %s is 1 minute away!</string>
    <string name="trip_stat">Route %1$s is %2$d minutes away!</string>
    <string name="report_problem_code">What\'s the problem?</string>
    <string name="report_problem_comment">Anything else?</string>
    <string name="report_problem_comment_hint">optional</string>
    <string name="report_problem_email">Your email address</string>
    <string name="report_problem_email_hint">optional</string>
    <string name="report_problem_cancel">Cancel</string>
    <string name="report_problem_hint">Your reports help OneBusAway find and fix problems!</string>
    <string name="preferences_category_location">Location</string>
    <string name="preferences_category_backup">Backup</string>
    <string name="preferences_category_advanced">Advanced</string>
    <string name="preferences_region_title">Your region</string>
    <string name="preferences_region_summary">The transit region used by the app</string>
    <string name="preferences_oba_api_servername_title">OneBusAway API Server</string>
    <string name="preferences_oba_api_servername_summary">Determines the server used in OneBusAway API calls</string>
    <string name="preferences_save_title">Save to SD card</string>
    <string name="preferences_save_summary">Saves your starred and recent stops and routes</string>
    <string name="preferences_restore_title">Restore from SD card</string>
    <string name="preferences_restore_summary">Restores from previous save</string>
</resources>