<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010 Brian Ferris (bdferris@onebusaway.org)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="preferences_root">
    <PreferenceCategory android:title="@string/preferences_category_location">
        <Preference
            android:key="@string/preference_key_region"
            android:title="@string/preferences_region_title"
            android:summary="@string/preferences_region_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_backup">
        <com.joulespersecond.seattlebusbot.backup.SavePreference
            android:title="@string/preferences_save_title"
            android:summary="@string/preferences_save_summary"/>
        <com.joulespersecond.seattlebusbot.backup.RestorePreference
            android:title="@string/preferences_restore_title"
            android:summary="@string/preferences_restore_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_advanced">
        <EditTextPreference
            android:title="@string/preferences_oba_api_servername_title"
            android:summary="@string/preferences_oba_api_servername_summary"            
            android:key="@string/preference_key_oba_api_url" />
    </PreferenceCategory>
</PreferenceScreen>
