<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2011 Paul Watts (paulcwatts@gmail.com)
     and individual contributors.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/HeaderItem"
    android:id="@+id/arrivals_list_header"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/stop_favorite"
        android:src="@drawable/android:star_off"
        android:contentDescription="@string/stop_info_favorite"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="35dp"
        android:maxHeight="35dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:id="@+id/edit_name_container"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <!--  NOTE: I'm sure there's a way to have a textview
          switch between displaying itself as an edittext
          and a regular text, but this method will be
          guaranteed to work across any release -->
        <EditText
            android:id="@+id/edit_name"
            style="@style/HeaderText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:gravity="center">

            <Button
                android:id="@+id/edit_name_cancel"
                android:text="@string/stop_info_cancel"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1" />

            <Button
                android:id="@+id/edit_name_save"
                android:text="@string/stop_info_save"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1" />

            <Button
                android:id="@+id/edit_name_revert"
                android:text="@string/stop_info_clear"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_container"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/arrivals_header_pad_left"
        android:paddingBottom="@dimen/arrivals_header_pad_left"
        android:layout_toRightOf="@+id/stop_favorite"
        android:layout_toLeftOf="@+id/right_margin_separator"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/stop_name"
            style="@style/HeaderText"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left" />

        <TextView
            android:id="@+id/routeIds"
            style="@style/Header3Text"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:includeFontPadding="false"/>

        <TextView
            android:id="@+id/direction"
            style="@style/Header3Text"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:includeFontPadding="false"/>
    </LinearLayout>

    <View
            android:id="@+id/right_margin_separator"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/right_margin_container"
            android:background="@android:color/white"/>

    <LinearLayout
            android:id="@+id/right_margin_container"
            android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.joulespersecond.view.ArrowView
                android:id="@+id/arrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal"/>

        <com.joulespersecond.view.DistanceToStopView
                android:id="@+id/dist_to_stop"
                style="@style/Header3Text"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_group"
        style="@style/Header2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/filter"
            style="@style/Header2Text"
            android:paddingLeft="@dimen/arrivals_header_pad_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/show_all"
            android:text="@string/stop_info_filter_showall"
            style="@style/Header2Text"
            android:paddingLeft="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:bufferType="spannable"
            android:linksClickable="true"/>
    </LinearLayout>
</RelativeLayout>
